# social-media-bot

./: README.md
Discord Bot/: main.py
social-media-bot/: discord.py  pyproject.toml  requirements.txt
social-media-bot/tests/: test_social_media_bot.py
