[tool.poetry]
name = "social-media-bot"
version = "0.1.0"
description = ""
authors = ["Ravinder Chadha <ravinderchadha1233@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
"discord.py" = "^1.7.3"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
